syntax = "proto3";

package protocol;

import "google/protobuf/timestamp.proto";

service CountService {
    rpc Incr(IncrRequest) returns (IncrResponse) {}
}

message IncrRequest {
    string api = 1;
    string sid = 2;
    string uid = 3;
    string key = 4;
}

message IncrResponse {
    google.protobuf.Timestamp timestamp = 1;
    string api = 2;
    int32 code = 3;
    string error = 4;
    int32 count = 5;
}